objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Budget_Variance__c</fullName>
        <formula>ActualCost - BudgetedCost</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_ROI__c</fullName>
        <formula>IF( ActualCost &gt; 0, (AmountWonOpportunities - ActualCost )/ ActualCost, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ROI is Net Gain. (Total Amount Won - Actual Cost) / Actual Cost</inlineHelpText>
        <label>Campaign ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Name__c</fullName>
        <label>Old Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effectiveness_Rating__c</fullName>
        <formula>IF(  Campaign_ROI__c  &lt; 1, IMAGE(&apos;/resource/1250029193000/dollar_zero&apos;, &apos;zero&apos;) ,
IF(Campaign_ROI__c &lt; 1.5, IMAGE(&apos;/resource/1250029230000/dollar_one&apos;, &apos;one&apos;),
IF(Campaign_ROI__c &lt; 2.0, IMAGE(&apos;/resource/1250029263000/dollar_two&apos;, &apos;two&apos;) ,
IF(Campaign_ROI__c &lt; 2.5, IMAGE(&apos;/resource/1250029415000/dollar_three&apos;, &apos;three&apos;) ,
IF(Campaign_ROI__c &lt; 3, IMAGE(&apos;/resource/1250029446000/dollar_four&apos;, &apos;four&apos;) ,
IMAGE(&apos;/resource/1250029472000/dollar_five&apos;, &apos;five&apos;) ) ) ) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Campaign Effectiveness is driven by the ROI.  5 Dollars signs is over 300%.</inlineHelpText>
        <label>Campaign Effectiveness</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>43</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Offer__c</fullName>
        <label>Primary Offer</label>
        <picklist>
            <picklistValues>
                <fullName>Whitepaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Us Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ROI_Chart__c</fullName>
        <formula>IMAGE(&apos;http://chart.apis.google.com/chart?chs=200x125&amp;cht=gom&amp;chd=t:&apos; + TEXT( Campaign_ROI__c * 100 ) + &apos;&amp;chds=0,200&amp;chxt=x,y&amp;chxl=0:|&apos; + TEXT(Campaign_ROI__c * 100) +&apos;%|1:|0%|200%&apos;, &apos;No Image&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ROI Chart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Towards_Goal__c</fullName>
        <formula>IMAGE(&apos;http://chart.apis.google.com/chart?chs=200x125&amp;cht=gom&amp;chd=t:&apos; + TEXT(AmountWonOpportunities) + &apos;&amp;chds=0,&apos; + TEXT(ExpectedRevenue) + &apos;&amp;chxt=x,y&amp;chxl=0:|$&apos; + TEXT(AmountWonOpportunities) +&apos;|1:||Goal&apos;, &apos;No Image&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Towards Goal</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllChildCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.ChildCampaign</value>
        </filters>
        <label>All Child Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllParentCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <columns>CAMPAIGN.TOT_CONTACTS</columns>
        <columns>TOT_AMOUNT_ALL</columns>
        <columns>TOT_AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.ParentCampaign</value>
        </filters>
        <label>All Parent Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Progress_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In-Progress Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Planned_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Planned</value>
        </filters>
        <label>Planned Campaigns</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>ChildCampaign</fullName>
        <active>true</active>
        <label>Child Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>ParentCampaign</fullName>
        <active>true</active>
        <label>Parent Campaign</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>